--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,6 +27,9 @@ aliases:
       xcode_version:
         type: string
         default: '15.3'
+      install_swiftlint:
+        type: boolean
+        default: true
     environment:
       CIRCLECI_TESTS_GENERATE_SNAPSHOTS: << pipeline.parameters.generate_snapshots >>
       CIRCLECI_TESTS_GENERATE_REVENUECAT_UI_SNAPSHOTS: << pipeline.parameters.generate_revenuecatui_snapshots >>
@@ -112,6 +115,9 @@ commands:
       install_mint:
         type: boolean
         default: false
+      install_swiftlint:
+        type: boolean
+        default: true
     steps:
       # CircleCI images fail on Ruby 3.3
       # https://github.com/fastlane/fastlane/issues/21794#issuecomment-2021331335
@@ -135,13 +141,16 @@ commands:
           steps:
             - install-brew-dependency:
                 dependency_name: 'xcbeautify'
-      - install-brew-dependency:
-          dependency_name: 'swiftlint'
       - when:
           condition: << parameters.install_mint >>
           steps:
             - install-brew-dependency:
                 dependency_name: 'mint'
+      - when:
+          condition: << parameters.install_swiftlint >>
+          steps:
+            - install-brew-dependency:
+                dependency_name: "swiftlint"
       - run: brew tap robotsandpencils/made
       - save_cache:
           key: homebrew-cache-{{ checksum "Brewfile.lock.json" }}-{{ arch }}
@@ -411,7 +420,8 @@ jobs:
     <<: *base-job
     steps:
       - checkout
-      - install-dependencies
+      - install-dependencies:
+          install_swiftlint: << parameters.install_swiftlint >>
       - update-spm-installation-commit
       - run:
           name: SPM RevenueCatUI Tests
@@ -436,7 +446,8 @@ jobs:
     <<: *base-job
     steps:
       - checkout
-      - install-dependencies
+      - install-dependencies:
+          install_swiftlint: << parameters.install_swiftlint >>
       - update-spm-installation-commit
       - run:
           name: SPM RevenueCatUI Release Build
@@ -470,7 +481,8 @@ jobs:
     <<: *base-job
     steps:
       - checkout
-      - install-dependencies
+      - install-dependencies:
+          install_swiftlint: << parameters.install_swiftlint >>
       - update-spm-installation-commit
       - run:
           name: SPM RevenueCatUI Release Build
@@ -544,7 +556,8 @@ jobs:
     <<: *base-job
     steps:
       - checkout
-      - install-dependencies
+      - install-dependencies:
+          install_swiftlint: << parameters.install_swiftlint >>
       - run:
           name: Run tests
           command: bundle exec fastlane test_ios
@@ -568,7 +581,8 @@ jobs:
     <<: *base-job
     steps:
       - checkout
-      - install-dependencies
+      - install-dependencies:
+          install_swiftlint: << parameters.install_swiftlint >>
       - update-spm-installation-commit
       - run:
           name: Run tests
@@ -598,7 +612,8 @@ jobs:
     resource_class: macos.x86.medium.gen2
     steps:
       - checkout
-      - install-dependencies
+      - install-dependencies:
+          install_swiftlint: << parameters.install_swiftlint >>
       - update-spm-installation-commit
       - run:
           name: Run tests
@@ -666,6 +681,7 @@ jobs:
       - install-dependencies:
           install_xcbeautify: false
           install_mint: true
+          install_swiftlint: << parameters.install_swiftlint >>
       - install-xcbeautify-for-xcode14
       - update-spm-installation-commit
       - install-runtime:
@@ -695,7 +711,8 @@ jobs:
     resource_class: macos.x86.medium.gen2
     steps:
       - checkout
-      - install-dependencies
+      - install-dependencies:
+          install_swiftlint: << parameters.install_swiftlint >>
       - update-spm-installation-commit
       - install-runtime:
           runtime-name: iOS 13.7
@@ -724,7 +741,8 @@ jobs:
     resource_class: macos.x86.medium.gen2
     steps:
       - checkout
-      - install-dependencies
+      - install-dependencies:
+          install_swiftlint: << parameters.install_swiftlint >>
       - update-spm-installation-commit
       - install-runtime:
           runtime-name: iOS 12.4
@@ -1149,14 +1167,19 @@ workflows:
           xcode_version: '15.2'
       - run-test-ios-16:
           xcode_version: '14.3.0'
+          install_swiftlint: false
       - run-test-ios-15:
           xcode_version: '14.3.0'
+          install_swiftlint: false
       - run-test-ios-14:
           xcode_version: '14.2.0'
+          install_swiftlint: false
       - run-test-ios-13:
           xcode_version: '14.2.0'
+          install_swiftlint: false
       - run-test-ios-12:
           xcode_version: '14.2.0'
+          install_swiftlint: false
       - run-test-macos
 
   generate_revenuecatui_snapshots:
@@ -1164,8 +1187,10 @@ workflows:
     jobs:
       - spm-revenuecat-ui-ios-15:
           xcode_version: '14.3.0'
+          install_swiftlint: false
       - spm-revenuecat-ui-ios-16:
           xcode_version: '14.3.0'
+          install_swiftlint: false
       - spm-revenuecat-ui-ios-17:
           xcode_version: '15.2'
 
@@ -1180,16 +1205,20 @@ workflows:
       - lint
       - spm-release-build-xcode-14:
           xcode_version: '14.3.0'
+          install_swiftlint: false
       - spm-release-build-xcode-15:
           xcode_version: '15.2'
       - spm-xcode-14-1:
           xcode_version: '14.1.0'
+          install_swiftlint: false
       - spm-custom-entitlement-computation-build
       - spm-receipt-parser
       - spm-revenuecat-ui-ios-15:
           xcode_version: '14.3.0'
+          install_swiftlint: false
       - spm-revenuecat-ui-ios-16:
           xcode_version: '14.3.0'
+          install_swiftlint: false
       - spm-revenuecat-ui-ios-17:
           xcode_version: '15.2'
       - spm-revenuecat-ui-watchos
@@ -1198,19 +1227,24 @@ workflows:
           xcode_version: '15.2'
       - run-test-ios-16:
           xcode_version: '14.3.0'
+          install_swiftlint: false
       - run-test-ios-15:
           xcode_version: '14.3.0'
+          install_swiftlint: false
       - run-test-watchos
       - run-test-tvos
       # Pre-iOS 15 requires macOS 12 which requires Xcode 14.2
       # See https://circleci.com/docs/using-macos/#supported-xcode-versions
       - run-test-ios-14:
           xcode_version: '14.2.0'
+          install_swiftlint: false
       - run-test-ios-13:
           xcode_version: '14.2.0'
+          install_swiftlint: false
           <<: *release-branches-and-main
       - run-test-ios-12:
           xcode_version: '14.2.0'
+          install_swiftlint: false
           <<: *release-branches-and-main
       - build-tv-watch-and-macos
       - build-visionos
