--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1151,10 +1151,13 @@ jobs:
               }
 
   deploy-to-spm:
-    <<: *base-job
+    docker:
+      - image: cimg/ruby:3.1.2
+    working_directory: ~/purchases-ios
+    shell: /bin/bash --login -o pipefail
     steps:
       - checkout
-      - install-bundle-dependencies
+      - install-rubydocker-dependencies
       - run:
           name: Clone purchases-ios and push to purchases-ios-spm
           command: bundle exec fastlane deploy_to_spm
