--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1233,74 +1233,74 @@ workflows:
         - not: << pipeline.parameters.generate_snapshots >>
         - not: << pipeline.parameters.generate_revenuecatui_snapshots >>
     jobs:
-      - lint
-      - spm-release-build-xcode-14:
-          xcode_version: '14.3.0'
-          install_swiftlint: false
-      - spm-release-build-xcode-15:
-          xcode_version: '15.2'
-      - spm-xcode-14-1:
-          xcode_version: '14.1.0'
-          install_swiftlint: false
-      - spm-custom-entitlement-computation-build
-      - spm-receipt-parser
-      - spm-revenuecat-ui-ios-15:
-          xcode_version: '14.3.0'
-          install_swiftlint: false
-      - spm-revenuecat-ui-ios-16:
-          xcode_version: '14.3.0'
-          install_swiftlint: false
-      - spm-revenuecat-ui-ios-17:
-          xcode_version: '15.2'
-      - spm-revenuecat-ui-watchos
-      - run-test-macos
-      - run-test-ios-17:
-          xcode_version: '15.2'
-      - run-test-ios-16:
-          xcode_version: '14.3.0'
-          install_swiftlint: false
-      - run-test-ios-15:
-          xcode_version: '14.3.0'
-          install_swiftlint: false
-      - run-test-watchos:
-          xcode_version: '14.3.0'
-      - run-test-tvos
-      # Pre-iOS 15 requires macOS 12 which requires Xcode 14.2
-      # See https://circleci.com/docs/using-macos/#supported-xcode-versions
-      - run-test-ios-14:
-          xcode_version: '14.2.0'
-          install_swiftlint: false
-      - run-test-ios-13:
-          xcode_version: '14.2.0'
-          install_swiftlint: false
-          <<: *release-branches-and-main
-      - run-test-ios-12:
-          xcode_version: '14.2.0'
-          install_swiftlint: false
-          <<: *release-branches-and-main
-      - build-tv-watch-and-macos
-      - build-visionos
-      - backend-integration-tests-SK1:
-          filters:
-              branches:
-                # Forked pull requests have CIRCLE_BRANCH set to pull/XXX
-                ignore: /pull\/[0-9]+/
-      - backend-integration-tests-SK2:
-          filters:
-              branches:
-                # Forked pull requests have CIRCLE_BRANCH set to pull/XXX
-                ignore: /pull\/[0-9]+/
-      - backend-integration-tests-other:
-          filters:
-              branches:
-                # Forked pull requests have CIRCLE_BRANCH set to pull/XXX
-                ignore: /pull\/[0-9]+/
+      # - lint
+      # - spm-release-build-xcode-14:
+      #     xcode_version: '14.3.0'
+      #     install_swiftlint: false
+      # - spm-release-build-xcode-15:
+      #     xcode_version: '15.2'
+      # - spm-xcode-14-1:
+      #     xcode_version: '14.1.0'
+      #     install_swiftlint: false
+      # - spm-custom-entitlement-computation-build
+      # - spm-receipt-parser
+      # - spm-revenuecat-ui-ios-15:
+      #     xcode_version: '14.3.0'
+      #     install_swiftlint: false
+      # - spm-revenuecat-ui-ios-16:
+      #     xcode_version: '14.3.0'
+      #     install_swiftlint: false
+      # - spm-revenuecat-ui-ios-17:
+      #     xcode_version: '15.2'
+      # - spm-revenuecat-ui-watchos
+      # - run-test-macos
+      # - run-test-ios-17:
+      #     xcode_version: '15.2'
+      # - run-test-ios-16:
+      #     xcode_version: '14.3.0'
+      #     install_swiftlint: false
+      # - run-test-ios-15:
+      #     xcode_version: '14.3.0'
+      #     install_swiftlint: false
+      # - run-test-watchos:
+      #     xcode_version: '14.3.0'
+      # - run-test-tvos
+      # # Pre-iOS 15 requires macOS 12 which requires Xcode 14.2
+      # # See https://circleci.com/docs/using-macos/#supported-xcode-versions
+      # - run-test-ios-14:
+      #     xcode_version: '14.2.0'
+      #     install_swiftlint: false
+      # - run-test-ios-13:
+      #     xcode_version: '14.2.0'
+      #     install_swiftlint: false
+      #     <<: *release-branches-and-main
+      # - run-test-ios-12:
+      #     xcode_version: '14.2.0'
+      #     install_swiftlint: false
+      #     <<: *release-branches-and-main
+      # - build-tv-watch-and-macos
+      # - build-visionos
+      # - backend-integration-tests-SK1:
+      #     filters:
+      #         branches:
+      #           # Forked pull requests have CIRCLE_BRANCH set to pull/XXX
+      #           ignore: /pull\/[0-9]+/
+      # - backend-integration-tests-SK2:
+      #     filters:
+      #         branches:
+      #           # Forked pull requests have CIRCLE_BRANCH set to pull/XXX
+      #           ignore: /pull\/[0-9]+/
+      # - backend-integration-tests-other:
+      #     filters:
+      #         branches:
+      #           # Forked pull requests have CIRCLE_BRANCH set to pull/XXX
+      #           ignore: /pull\/[0-9]+/
       - backend-integration-tests-offline
-      - backend-integration-tests-custom-entitlements:
-          filters:
-              branches:
-                # Forked pull requests have CIRCLE_BRANCH set to pull/XXX
-                ignore: /pull\/[0-9]+/
+      # - backend-integration-tests-custom-entitlements:
+      #     filters:
+      #         branches:
+      #           # Forked pull requests have CIRCLE_BRANCH set to pull/XXX
+      #           ignore: /pull\/[0-9]+/
 
   deploy:
     when:
