--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -67,9 +67,7 @@ aliases:
       tags:
         ignore: /.*/
       branches:
-        only: /^release\/.*\.0$/
-  docs: &docs
-    xcode_version: '14.3.0'
+        only: /^release\/.*\.0$/    
 
 commands:
   install-runtime:
@@ -865,7 +863,6 @@ jobs:
 
   docs-build:
     <<: *base-job
-    <<: *docs
     steps:
       - setup-git-credentials
       - checkout
@@ -878,7 +875,6 @@ jobs:
 
   docs-deploy:
     <<: *base-job
-    <<: *docs
     steps:
       - setup-git-credentials
       - checkout
@@ -1228,7 +1224,9 @@ workflows:
         - not: << pipeline.parameters.generate_revenuecatui_snapshots >>
     jobs:
       - lint
-      - docs-build
+      - docs-build:
+          xcode_version: '14.3.0'
+          install_swiftlint: false
       - spm-release-build
       - spm-custom-entitlement-computation-build
       - spm-receipt-parser
@@ -1345,8 +1343,8 @@ workflows:
             - make-release
           <<: *release-tags
       - docs-deploy:
-          <<: *docs
           <<: *release-tags
+          xcode_version: '14.3.0'
       - deploy-purchase-tester:
           <<: *release-tags
       - notify-on-non-patch-release-branches:
